[CZID-472] Fix show overflow button logic (#3275)
* fix show overflow button logic

* fix spaces

* ci - prettier and eslint fixes

---------

--- a/app/assets/src/components/views/SampleView/sample_message.scss
+++ b/app/assets/src/components/views/SampleView/sample_message.scss
@@ -85,5 +85,6 @@
   .imgMicrobe {
     width: $img-m;
     height: $img-m;
+    z-index: -1;
   }
 }
